
Performance improvement
* map (file offset and size) items and item values first read on demand
* pre allocate item array entries

Tools
* nk2input
  - implement liberror
* nk2export
  - export item data (export handle)
* nk2info
  - print amount of items
  - create info handle

Deployment:
* create debian package files
* update macosx package files
* update msvcpp files (implement libbfio)

20090905
* updated manuals
* updated nk2input codepage detection
* implemented libbfio open

20090904
* added libtool m4 directory support
* updated common, liberror, libfmapi, libuna, libbfio
* added libnotify, libsystem
* updated spec file to handle empty requires and build requires
* updated libnk2_notify, libnk2_error, libnk2_support
* updated configure
* updated codpage definitions
* worked on libsystem integration
* updated guid and filetime
* added value_type refactored item and item_values

20090524
* updated libbfio
* implemented libbfio offset tracking for debug output
* updated common/types.h to be generated by autoconf
* moved error functions into libnk2_error.[ch]
* moved signal abort function into libnk2_file.[ch]
* removed unused code
* updated msvscpp files
* updated list type
* added array type
* updated nk2tools/filetime.c
* worked on item API

20090514
* updated liberror with libewf version
* updated libuna with libewf version
* updated libfmapi with libpff version
* updated libbfio with libewf version
* updated nk2tools/system_string.[ch] with ewftools version
* updated nk2tools/file_io.[ch] with ewftools version
* updated common/endian.h with libewf version
* Strings are now formatted to UTF-8 in debug output

20090324
* fixed small logic error in io handle

20090222
* removed character_string and string_conversions
* worked on locale support

20090220

20090219
* Correction in error output

20090218
* small update of manuals

20090202
* Added libfmapi

20090131
* Added item functions

20090129
* Changed item separator to item value entries

20090128