@@ -26,133 +26,9 @@
 
 #include <liberror.h>
 
-#if defined( WINAPI )
-#include <rpcdce.h>
-
-#elif defined( HAVE_UUID_UUID_H )
-#include <uuid/uuid.h>
-#endif
-
 #include <libsystem.h>
 
 #include "guid.h"
-
-#if defined( HAVE_GUID_SUPPORT ) || defined( WINAPI )
-
-/* Determines the GUID
- * Returns 1 if successful or -1 on error
- */
-int guid_generate(
-     uint8_t *guid,
-     size_t guid_size,
-     uint8_t guid_type,
-     liberror_error_t **error )
-{
-#if defined( WINAPI )
-	UUID uuid             = { 0, 0, 0, { 0, 0, 0, 0, 0, 0, 0, 0 } };
-#endif
-
-	static char *function = "guid_generate";
-
-	if( guid == NULL )
-	{
-		liberror_error_set(
-		 error,
-		 LIBERROR_ERROR_DOMAIN_ARGUMENTS,
-		 LIBERROR_ARGUMENT_ERROR_INVALID_VALUE,
-		 "%s: invalid GUID.",
-		 function );
-
-		return( -1 );
-	}
-	if( guid_size < GUID_SIZE )
-	{
-		liberror_error_set(
-		 error,
-		 LIBERROR_ERROR_DOMAIN_ARGUMENTS,
-		 LIBERROR_ARGUMENT_ERROR_VALUE_TOO_SMALL,
-		 "%s: GUID too small.",
-		 function );
-
-		return( -1 );
-	}
-	if( guid_size > (size_t) SSIZE_MAX )
-	{
-		liberror_error_set(
-		 error,
-		 LIBERROR_ERROR_DOMAIN_ARGUMENTS,
-		 LIBERROR_ARGUMENT_ERROR_VALUE_EXCEEDS_MAXIMUM,
-		 "%s: invalid GUID size value exceeds maximum.",
-		 function );
-
-		return( -1 );
-	}
-	if( ( guid_type != GUID_TYPE_RANDOM )
-	 && ( guid_type != GUID_TYPE_TIME ) )
-	{
-		liberror_error_set(
-		 error,
-		 LIBERROR_ERROR_DOMAIN_ARGUMENTS,
-		 LIBERROR_ARGUMENT_ERROR_UNSUPPORTED_VALUE,
-		 "%s: unsupported GUID type.",
-		 function );
-
-		return( -1 );
-	}
-	if( guid_type == GUID_TYPE_RANDOM )
-	{
-#if defined( WINAPI )
-		UuidCreate(
-		 &uuid );
-
-#elif defined( HAVE_UUID_GENERATE_RANDOM )
-		uuid_generate_random(
-		 guid );
-#endif
-	}
-	if( guid_type == GUID_TYPE_TIME )
-	{
-#if defined( WINAPI )
-		UuidCreateSequential(
-		 &uuid );
-
-#elif defined( HAVE_UUID_GENERATE_TIME )
-		uuid_generate_time(
-		 guid );
-#endif
-	}
-#if defined( WINAPI )
-	endian_little_revert_32bit(
-	 guid,
-	 uuid.Data1 );
-
-	guid += 4;
-
-	endian_little_revert_16bit(
-	 guid,
-	 uuid.Data2 );
-
-	guid += 2;
-
-	endian_little_revert_16bit(
-	 guid,
-	 uuid.Data3 );
-
-	guid += 2;
-
-	guid[ 0 ] = uuid.Data4[ 0 ];
-	guid[ 1 ] = uuid.Data4[ 1 ];
-	guid[ 2 ] = uuid.Data4[ 2 ];
-	guid[ 3 ] = uuid.Data4[ 3 ];
-	guid[ 4 ] = uuid.Data4[ 4 ];
-	guid[ 5 ] = uuid.Data4[ 5 ];
-	guid[ 6 ] = uuid.Data4[ 6 ];
-	guid[ 7 ] = uuid.Data4[ 7 ];
-#endif
-	return( 1 );
-}
-
-#endif
 
 /* Converts the GUID into a string
  * Returns 1 if successful or -1 on error
